correct issues